[gd_scene load_steps=4 format=2]

[ext_resource path="res://grafika_otoczenie/ruda-zelaza.png" type="Texture" id=1]
[ext_resource path="res://src/Ruda_zelaza.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="Ruda_zelaza" type="Node2D"]
script = ExtResource( 2 )

[node name="tekstura" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
